experiement_output/error_log/nondex-bepopov-autoshowroom:server.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/OrderWebService.java:7: error: package javax.jws does not exist
import javax.jws.WebService;
                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/OrderWebService.java:10: error: cannot find symbol
@WebService
 ^
  symbol: class WebService
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/ValueProviderWebService.java:5: error: package javax.jws does not exist
import javax.jws.WebService;
                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/ValueProviderWebService.java:8: error: cannot find symbol
@WebService
 ^
  symbol: class WebService
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/ConnectionWebService.java:3: error: package javax.jws does not exist
import javax.jws.WebService;
                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/ConnectionWebService.java:5: error: cannot find symbol
@WebService
 ^
  symbol: class WebService
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/impl/ConnectionWebServiceImpl.java:7: error: package javax.jws does not exist
import javax.jws.WebService;
                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/impl/ConnectionWebServiceImpl.java:10: error: cannot find symbol
@WebService(serviceName = "connectionService", portName = "connectionServicePort")
 ^
  symbol: class WebService
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/impl/OrderWebServiceImpl.java:10: error: package javax.jws does not exist
import javax.jws.WebService;
                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/impl/OrderWebServiceImpl.java:14: error: cannot find symbol
@WebService(serviceName = "orderService", portName = "orderServicePort")
 ^
  symbol: class WebService
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/impl/ValueProviderWebServiceImpl.java:11: error: package javax.jws does not exist
import javax.jws.WebService;
                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/ws/impl/ValueProviderWebServiceImpl.java:16: error: cannot find symbol
@WebService(serviceName = "valueProviderService", portName = "valueProviderServicePort")
 ^
  symbol: class WebService
Note: /mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1179/wd/NonDex-plugin-test/github.com/bepopov/autoshowroom/server/src/main/java/ru/merann/bopopov/autoshowroom/server/rs/RFC3339DateFormat.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
12 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':server:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 26s
